wip: code reviews
---
v1:
 * Andrzej Hajda review comments incorporated
   SPDX identifier
   development debug removed
   alphabetic order headers
   u32 instead of unit32_t
   magic numbers to macros for CLRSI and mux registers
   ignored return value

   unused field status used in tc->status = connector_status_connected;
   panel_disable reverse order gpios - as per the datasheet
   it is not in reverse order

 * Laurent Pinchart review comments incorporated
   mdelay to usleep_range
   bus_formats added

--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -303,8 +303,26 @@
 
 		panel: auo,b101xtn01 {
                         status = "okay";
-                        compatible = "auo,b101xtn01";
+			compatible = "auo,b101xtn01", "panel-lvds";
                         power-supply = <&pm8916_l14>;
+
+                        width-mm = <223>;
+                        height-mm = <125>;
+
+                        data-mapping = "jeida-24";
+
+                        panel-timing {
+                                /* 1366x768 @60Hz */
+                                clock-frequency = <72000000>;
+                                hactive = <1366>;
+                                vactive = <768>;
+                                hsync-len = <70>;
+                                hfront-porch = <20>;
+                                hback-porch = <0>;
+                                vsync-len = <42>;
+                                vfront-porch = <14>;
+                                vback-porch = <0>;
+                        };
 
                         port {
                                 panel_in: endpoint {
