--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -293,8 +293,8 @@
 
 					port@1 {
 						reg = <1>;
-						d2l_out: endpoint {
-							remote-endpoint = <&panel_in>;
+						lvds0_out: endpoint {
+							remote-endpoint = <&panel_in0>;
 						};
 					};
 				};
@@ -325,8 +325,8 @@
                         };
 
                         port {
-                                panel_in: endpoint {
-                                        remote-endpoint = <&d2l_out>;
+                                panel_in0: endpoint {
+                                        remote-endpoint = <&lvds0_out>;
                                 };
                         };
                 };
