--- a/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8016-sbc.dtsi
@@ -310,6 +310,7 @@
                         height-mm = <125>;
 
                         data-mapping = "jeida-24";
+                        //data-mapping = "jeida-18";
 
                         panel-timing {
                                 /* 1366x768 @60Hz */
@@ -326,6 +327,37 @@
 
                         port {
                                 panel_in0: endpoint {
+                                        remote-endpoint = <&lvds0_out>;
+                                };
+                        };
+                };
+
+		panel2: eppendorf {
+                        status = "okay";
+			compatible = "innolux,at070tn92", "panel-lvds";
+                        power-supply = <&pm8916_l14>;
+
+                        width-mm = <154>;
+                        height-mm = <86>;
+
+                        data-mapping = "vesa-24";
+                        //data-mapping = "jeida-18";
+
+                        panel-timing {
+                                /* 800x480 @60Hz */
+                                clock-frequency = <38390040>;
+                                hactive = <800>;
+                                vactive = <480>;
+                                hsync-len = <40>;
+                                hfront-porch = <142>;
+                                hback-porch = <32>;
+                                vsync-len = <20>;
+                                vfront-porch = <126>;
+                                vback-porch = <5>;
+                        };
+
+                        port {
+                                panel_in0_testing: endpoint {
                                         remote-endpoint = <&lvds0_out>;
                                 };
                         };
