--- a/Documentation/devicetree/bindings/display/bridge/toshiba,tc358775.yaml
+++ b/Documentation/devicetree/bindings/display/bridge/toshiba,tc358775.yaml
@@ -13,57 +13,61 @@ description: |
  This binding supports DSI to LVDS bridge TC358775
 
 properties:
- compatible:
-  const: toshiba,tc358775
+  compatible:
+    const: toshiba,tc358775
 
- reg:
-   maxItems: 1
-   description: i2c address of the bridge, 0x0f
+  reg:
+    maxItems: 1
+    description: i2c address of the bridge, 0x0f
 
- vdd-supply:
-   maxItems: 1
-   description:  1.2V LVDS Power Supply
+  vdd-supply:
+    maxItems: 1
+    description:  1.2V LVDS Power Supply
 
- vddio-supply:
-   maxItems: 1
-   description: 1.8V IO Power Supply
+  vddio-supply:
+    maxItems: 1
+    description: 1.8V IO Power Supply
 
- stby-gpios:
-   maxItems: 1
-   description: Standby pin, Low active
+  stby-gpios:
+    maxItems: 1
+    description: Standby pin, Low active
 
- reset-gpios:
-   maxItems: 1
-   description: Hardware reset, Low active
+  reset-gpios:
+    maxItems: 1
+    description: Hardware reset, Low active
 
- ports:
-   type: object
-   description:
+  ports:
+    type: object
+    description:
       A node containing input and output port nodes with endpoint definitions
       as documented in
       Documentation/devicetree/bindings/media/video-interfaces.txt
-
     properties:
+      "#address-cells":
+        const: 1
+
+      "#size-cells":
+        const: 0
+
       port@0:
         type: object
         description: |
           DSI Input. The remote endpoint phandle should be a
-	  reference to a valid mipi_dsi_host device node.
+          reference to a valid mipi_dsi_host device node.
+
       port@1:
         type: object
         description: |
           Video port for LVDS output (panel or connector).
+
       port@2:
         type: object
         description: |
           Video port for Dual link LVDS output (panel or connector).
 
-      required:
+    required:
       - port@0
       - port@1
-
-      optional:
-      - port@2
 
 required:
  - compatible
@@ -76,9 +80,14 @@ required:
 
 examples:
  - |
+    #include <dt-bindings/gpio/gpio.h>
+
     i2c@78b8000 {
         /* On High speed expansion */
         label = "HS-I2C2";
+        reg = <0x078b8000 0x500>;
+        #address-cells = <1>;
+        #size-cells = <0>;
 
         tc_bridge: bridge@f {
             compatible = "toshiba,tc358775";
@@ -96,16 +105,16 @@ examples:
 
                 port@0 {
                     reg = <0>;
-                    d2l_in: endpoint {
+                    d2l_in_test: endpoint {
                         remote-endpoint = <&dsi0_out>;
                     };
                 };
 
                 port@1 {
                     reg = <1>;
-                        lvds0_out: endpoint {
-                            remote-endpoint = <&panel_in0>;
-                        };
+                    lvds_out: endpoint {
+                        remote-endpoint = <&panel_in>;
+                    };
                 };
             };
         };
@@ -134,47 +143,72 @@ examples:
         };
 
         port {
-            panel_in0: endpoint {
+            panel_in: endpoint {
                 remote-endpoint = <&lvds0_out>;
             };
         };
-};
+    };
 
-    tc_bridge: bridge@f {
-        compatible = "toshiba,tc358775";
-        reg = <0x0f>;
-
-        vdd-supply = <&pm8916_l2>;
-        vddio-supply = <&pm8916_l6>;
-
-        stby-gpio = <&msmgpio 99 GPIO_ACTIVE_LOW>;
-        reset-gpio = <&msmgpio 72 GPIO_ACTIVE_LOW>;
+    dsi@1a98000 {
+        reg = <0x1a98000 0x25c>;
+        reg-names = "dsi_ctrl";
 
         ports {
             #address-cells = <1>;
             #size-cells = <0>;
-
-            port@0 {
-                reg = <0>;
-                    d2l_in: endpoint {
-                        remote-endpoint = <&dsi0_out>;
-                    };
-            };
-
             port@1 {
                 reg = <1>;
-                    lvds0_out: endpoint {
+                dsi0_out: endpoint {
+                    remote-endpoint = <&d2l_in_test>;
+                        data-lanes = <0 1 2 3>;
+                };
+             };
+         };
+     };
+
+ - |
+    i2c@78b8000 {
+        /* On High speed expansion */
+        label = "HS-I2C2";
+        reg = <0x078b8000 0x500>;
+        #address-cells = <1>;
+        #size-cells = <0>;
+
+        tc_bridge_dual: bridge@f {
+            compatible = "toshiba,tc358775";
+            reg = <0x0f>;
+
+            vdd-supply = <&pm8916_l2>;
+            vddio-supply = <&pm8916_l6>;
+
+            stby-gpio = <&msmgpio 99 GPIO_ACTIVE_LOW>;
+            reset-gpio = <&msmgpio 72 GPIO_ACTIVE_LOW>;
+
+            ports {
+                #address-cells = <1>;
+                #size-cells = <0>;
+
+                port@0 {
+                    reg = <0>;
+                    d2l_in_dual: endpoint {
+                        remote-endpoint = <&dsi0_out_dual>;
+                    };
+                };
+
+                port@1 {
+                    reg = <1>;
+                    lvdsi0_out: endpoint {
                         remote-endpoint = <&panel_in0>;
                     };
-            };
+                };
 
-            port@2 {
-                reg = <2>;
+                port@2 {
+                    reg = <2>;
                     lvds1_out: endpoint {
                         remote-endpoint = <&panel_in1>;
                     };
+                };
             };
-
         };
     };
 
@@ -220,19 +254,20 @@ examples:
         };
     };
 
-    mdss@1a00000 {
+    dsi@1a98000 {
+        reg = <0x1a98000 0x25c>;
+        reg-names = "dsi_ctrl";
 
-        mdp@1a01000 {
-        };
-
-        dsi@1a98000 {
-            ports {
-                port@1 {
-                    dsi0_out: endpoint {
-                    remote-endpoint = <&d2l_in>;
+        ports {
+            #address-cells = <1>;
+            #size-cells = <0>;
+            port@1 {
+                reg = <1>;
+                dsi0_out_dual: endpoint {
+                    remote-endpoint = <&d2l_in_dual>;
                         data-lanes = <0 1 2 3>;
-                    };
                 };
-            };
-        };
-    };
+             };
+         };
+     };
+...
